updated awards and decorations page

--- a/awards_decorations.html
+++ b/awards_decorations.html
@@ -41,9 +41,14 @@
     <hr>
     <section class="certs">
         <div class="card">
+            <div class="card-body"><a href="Images/datacamp_intro_to_java_certificate.jpg"><img
+                    src="Images/datacamp_intro_to_java_certificate.jpg"
+                    alt="Datacamp Introduction To Java Certificate"></a></div>
+        </div>
+        <div class="card">
             <div class="card-body"><a href="Images/1775-Club-Membership-Certificate.jpg"><img
                     src="Images/1775-Club-Membership-Certificate.jpg"
-                    alt="freeCodeCamp Certificate of Completion - Responsive Web Design"></a></div>
+                    alt="Membership Certificate For The 1775 Club"></a></div>
         </div>
         <div class="card">
             <div class="card-body"><a href="Certificates/respwebdesign.html"><img
