updated skills and work experience

--- a/quotes.html
+++ b/quotes.html
@@ -13,8 +13,8 @@
     <h2>Quote # 1</h2>
     <p>"You're only young once, but you can be immature forever."</p>
     <p>I first heard this quote from former Philadelphia Phillies pitcher, and current Philadelphia Phillies Color
-        Announcer Larry Anderson. I thought it was his quote but after some research, azquotes.com credits Germaine
-        Greer with the quote. You only live once and no one knows how long any of us have to live. So live your life and
+        Announcer Larry Anderson. I thought it was his quote, but after some research, azquotes.com credits Germaine
+        Greer with the quote. You only live once, and no one knows how long any of us have to live. So live your life to the fullest and
         enjoy because even if you have 100 years, it still feels too short.</p>
 </div>
 <div class="quote2">
@@ -28,7 +28,7 @@
         here?" The recruit replied, "About 10 miles." "That's about right." the instructor answered back. "Now, look
         down." the recruit did, and the instructor asked, "Now how far is it?" Without hesitation, the recruit replied,
         "Two feet." After that moment, anywhere I needed to travel, and didn't have transportation to get there, I've
-        remembered that quote.</p>
+        remembered that quote and walked. The ability to get somewhere is only limited by the strength of the desire to get there and the will to use the resources available at the time.  If you have two feet, you can walk.  If you don't think you can walk the distance, maybe you don't really need to go.</p>
 </div>
 <div class="quote3">
     <h2>Quote # 3</h2>
@@ -37,17 +37,17 @@
         war is Hell. After a short remark from B.J., Pierce says the above quote. After Father Mulcahy inquires to
         Pierce's logic, Hawkeye goes on to clarify that only sinners go to Hell and that there are no innocent
         bystanders. But War is full of innocent people, children, old ladies, and even the soldiers fighting the war
-        are, for the most part, innocent.</p>
+        are, for the most part, innocent.  War is an ugly business.</p>
 </div>
 <div class="quote4">
     <h2>Quote # 4</h2>
     <p>"A person should be so deep in study that he forgets to eat, so full of joy in learning he ignores all practical worries, and so busy acquiring knowledge he does not notice old age coming on."</p>
-    <p>This quote, is not necessarily a quote.  I got it from a publication entitled, "Socrates A Man for Our Times" by Paul Johnson.  It is said that the words I've written here were, according to the pupils of Confucius, Confucius' view.  But I like the attitude of taking what you desire, and getting it by the dedication it takes to work on it.  Work at your job so deeply that you don't realize it's lunchtime.  It doesn't have to be education, that was just Confucius' passion.</p>
+    <p>This quote, is not necessarily a quote.  I got it from a publication entitled, "Socrates A Man for Our Times" by Paul Johnson.  It is said that the words I've written here were, according to the pupils of Confucius, Confucius' view.  But I like the attitude of taking what you desire, and getting it by the dedication it takes to work on it.  Work at your job so deeply that you don't realize it's lunchtime.  It doesn't have to be education, that was just Confucius' passion.  This quote uses the premise of if you like what you do, it's not really work.  Professional athletes get paid to play a game they love.  Their passion for that game drives them to perform better, which keeps them playing at a professional level.  Find a career that does something you love and dedicate yourself to excelling at it.</p>
 </div>
 <div class="quote5">
     <h2>Quote # 5</h2>
     <p>To me, you're a genius.  To O'Mally, you're a genius.  But to a genius, you're no genius.</p>
-    <p>In 2011, the Canadian Rock band, Rush made a video as a prelude to open up their concerts.  In the video, Geddy Lee (Bass, Vocals, Keyboards) plays an owner (assumed) of a sausage diner.  Neil Peart (Percussion/Lyricist, Professor) plays a cop (O'Mally) and Alex Lifeson (Guitars, Keyboards) plays a music producer.  One of the lines Geddy says to Alex is the quote.
+    <p>In 2011, the Canadian Rock band, Rush made a video as a prelude to open up their concerts.  In the video, Geddy Lee (Bass, Vocals, Keyboards) plays an owner (assumed) of a sausage diner.  Neil Peart (Percussion/Lyricist, Professor) plays a cop (O'Mally) and Alex Lifeson (Guitars, Keyboards) plays a music producer.  One of the lines Geddy says to Alex is the quote. You might think you are the smartest person in the world.  But, there could always be someone who is more intelligent, or more experienced on a subject than you are.  Proceed with caution.</p>
 </div>
 <div class="quote6">
     <h2>Quote # 6</h2>
@@ -57,6 +57,17 @@
 <div class="quote7">
     <h2>Quote # 7</h2>
     <p>If you were your own employer, would you be entirely satisfied with the day's work you have done today?</p>
-    <p>When you finished your job today, or the last day you worked, did you give it your all?  Or did you leave some gas in the tank?  Would you want you to come back to work if you were your boss, or coworker?</p>
-</div></body>
+    <p>When you finished your job today, or the last day you worked, did you give it your all?  Or did you leave some gas in the tank?  Would you want you to come back to work if you were your boss, or coworker?  This quote sortof relates back to Quote # 4.  Do you have a passion for your job?  But, it is different as how to look at your own performance.  Is there something you could have done to complete your tasks sooner, better, with a better result?  Look at your job from your bosses perspective.  If you were your boss, would you want you to work for you?  If not, consider a change, either a different job, or a better performance.  Better performance could lead to better pay and promotions.  A different job (if you are not satisfied with your current one) could lead to a career you enjoy.</p>
+</div>
+<div class="quote8">
+    <h2>Quote # 8</h2>
+    <p>If it isn't your job to do it, perhaps it is your opportunity.</p>
+    <p>If you see a job that has to be done, you have two choices.  Do the job, or do nothing.  If you do the job, someone may notice that you took the initiative to go above and beyond.  That could reward you in the end.  If a supervisor notices you took the initiative, they may put more responsibility on you which could lead to promotion and/or pay raises.  If a supervisor notices and doesn't reward you, it could be a sign that you need to look for a different company that will recognize a person who will do other people's work and will reward you.  If you do nothing, it may lead to someone else getting a promotion or pay raise that you could have had.</p>
+</div>
+<div class="quote9">
+    <h2>Quote # 9</h2>
+    <p>There is a vast difference between failure and temporary defeat.</p>
+    <p>If you are working on a project and don't achieve the desired result on the first try, you have only been temporarily defeated.  As long as you continue to pursue the goal, you have not failed.  You only fail when you quit trying and still have not achieved the goal.</p>
+</div>
+</body>
 </html>
