updated favorite quotes

--- a/work_history.html
+++ b/work_history.html
@@ -10,14 +10,21 @@
 </head>
 <body class="work">
 <div class="container-fluid">
-    <div id="dover" class="border: 2px solid black">
+    <div id="ccp">
+        <h2 class="text1 dover">Community College of Philadellphia Student Work-Study Allowance Program</h2>
+        <p class="year text2">2026 – Present</p>
+        <p class="location text2">Philadelphia, Pennsylvania</p>
+        <p id="ccpvet1" class="text3">Veteran Associate</p>
+        <p id="ccpvet2" class="text3">I assist veterans in the Veteran Resource Center to apply for benefits, register for classes, and network with other veterans to help make their college life easier to navigate, and more successful.</p>
+    </div>
+    <div id="dover">
         <h2 class="text1 dover">Air Mobility Command Museum</h2>
         <p class="year text2">2025 - Present</p>
         <p class="location text2">Dover Air Force Base, Dover, Delaware</p>
         <p id="amcm" class="text3">Volunteer Tour Guide</p>
         <p id="amcmp" class="text3">I give tours of<a class="info aclink" href="aircraft.html">aircraft</a>from the history of the United States Air Force, including a KC-135E Stratotanker that I worked on while I was in the Air National Guard.  Additional aircraft include, but are not limited to, a C-47A which was used in the D-Day Invasion, the first (and ONLY) aircraft to drop an Inter Continental Ballistic Missile (ICBM), the first C-141A Starlifter (the very first C-141 built), the first KC-10A Extender delivered to the Air Force, among other aircraft.</p>
     </div>
-    <div id="vetInd" class="border: 2px solid black">
+    <div id="vetInd">
         <h2 class="text1">Veteran Industries</h2>
         <p class="year text2">2018 - 2019</p>
         <p class="location text2">Coatesville, Pennsylvania</p>
@@ -38,7 +45,7 @@
             answered users' inquiries regarding computer software and hardware operation to resolve problems that
             occurred.</p>
     </div>
-    <div class="border: 2px solid black bg-dark">
+    <div id="uber">
         <h2 class="text1">Uber</h2>
         <p class="year text2">2015 - 2018</p>
         <p class="location text2">New Jersey/Pennsylvania/Delaware/New York</p>
@@ -53,7 +60,7 @@
             mileage,
             costs, revenue and expenses and reported inappropriate behavior of passengers.</p>
     </div>
-    <div id="lyft" class="border: 2px solid black">
+    <div id="lyft">
         <h2 class="text1">Lyft</h2>
         <p class="year text2">2017 - 2018</p>
         <p class="location text2">New Jersey/Pennsylvania/Delaware/New York</p>
@@ -68,7 +75,7 @@
             mileage,
             costs, revenue and expenses and reported inappropriate behavior of passengers.</p>
     </div>
-    <div class=" border: 2px solid black bg-info">
+    <div id="njang1">
         <h2 class="text1">New Jersey Air National Guard</h2>
         <p class="year text2">2003 - 2012</p>
         <p class="location text2">Joint Base McGuire/Dix/Lakehurst, New Jersey</p>
@@ -92,7 +99,7 @@
             received
             an Honorable Discharge.</p>
     </div>
-    <div class=" border: 2px solid black bg-info">
+    <div id="caang">
         <h2 class="text1">California Air National Guard</h2>
         <p class="year text2">2000 - 2002</p>
         <p class="location text2">San Diego, California</p>
@@ -118,7 +125,7 @@
             October 2002,
             my position was dissolved.</p>
     </div>
-    <div class=" border: 2px solid black bg-info">
+    <div id="nvang">
         <h2 class="text1">Nevada Air National Guard</h2>
         <p class="year text2">1997 - 1999</p>
         <p class="location text2">Reno, Nevada</p>
@@ -145,7 +152,7 @@
             transportation
             of pallets after they were dropped, and other (civilian-type) vehicles.</p>
     </div>
-    <div id="apt" class=" border: 2px solid black">
+    <div id="apt">
         <h2 id="atpt" class="text1">All Points Towing</h2>
         <p class="year text2">1996 - 1999</p>
         <p class="location text2">Reno, Nevada</p>
