updated favorite quotes

--- a/work_history.html
+++ b/work_history.html
@@ -9,14 +9,14 @@
     <link href="css/work-history.css" rel="stylesheet">
 </head>
 <body class="work">
-<div class="container-fluid">
-    <div id="ccp">
-        <h2 class="text1 dover">Community College of Philadellphia Student Work-Study Allowance Program</h2>
-        <p class="year text2">2026 – Present</p>
-        <p class="location text2">Philadelphia, Pennsylvania</p>
-        <p id="ccpvet1" class="text3">Veteran Associate</p>
-        <p id="ccpvet2" class="text3">I assist veterans in the Veteran Resource Center to apply for benefits, register for classes, and network with other veterans to help make their college life easier to navigate, and more successful.</p>
-    </div>
+<!--<div class="container-fluid">-->
+<!--    <div id="ccp">-->
+<!--        <h2 class="text1 dover">Community College of Philadellphia Student Work-Study Allowance Program</h2>-->
+<!--        <p class="year text2">2026 – Present</p>-->
+<!--        <p class="location text2">Philadelphia, Pennsylvania</p>-->
+<!--        <p id="ccpvet1" class="text3">Veteran Associate</p>-->
+<!--        <p id="ccpvet2" class="text3">I assist veterans in the Veteran Resource Center to apply for benefits, register for classes, and network with other veterans to help make their college life easier to navigate, and more successful.</p>-->
+<!--    </div>-->
     <div id="dover">
         <h2 class="text1 dover">Air Mobility Command Museum</h2>
         <p class="year text2">2025 - Present</p>
