updated favorite quotes

--- a/awards_decorations.html
+++ b/awards_decorations.html
@@ -51,12 +51,12 @@
                     alt="Membership Certificate For The 1775 Club"></a></div>
         </div>
         <div class="card">
-            <div class="card-body"><a href="Certificates/respwebdesign.html"><img
+            <div class="card-body"><a href="Images/FreeCodeCamp%20-%20Responsive%20Web%20Design%20Certificate.png
                     src="Images/FreeCodeCamp%20-%20Responsive%20Web%20Design%20Certificate.png"
                     alt="freeCodeCamp Certificate of Completion - Responsive Web Design"></a></div>
         </div>
         <div class="card">
-            <div class="card-body"><a href="Certificates/codeup.html"><img
+            <div class="card-body"><a href="Images/Codeup_Graduation_Certificate.jpg"><img
                     src="Images/Codeup_Graduation_Certificate.jpg"
                     alt="Certificate of Completion - Web Development"></a></div>
         </div>
