--- a/quotes.html
+++ b/quotes.html
@@ -69,5 +69,10 @@
     <p>There is a vast difference between failure and temporary defeat.</p>
     <p>If you are working on a project and don't achieve the desired result on the first try, you have only been temporarily defeated.  As long as you continue to pursue the goal, you have not failed.  You only fail when you quit trying and still have not achieved the goal.</p>
 </div>
+<div class="quote10">
+    <h2>Quote # 10</h2>
+    <p>No one can make you feel inferior without your consent.</p>
+    <p>This quote is credited to Eleanor Roosevelt.  Words cannot physically hurt you.  They have no power over you that you don't give them.  If someone calls you a name, you can leave or ignore the person saying the word or words.  But speech will not physically injure you if you are strong enough to prevent it.  It is your choice.</p>
+</div>
 </body>
 </html>
