updated awards and decorations page

--- a/awards_decorations.html
+++ b/awards_decorations.html
@@ -51,7 +51,7 @@
                     alt="Membership Certificate For The 1775 Club"></a></div>
         </div>
         <div class="card">
-            <div class="card-body"><a href="Images/FreeCodeCamp%20-%20Responsive%20Web%20Design%20Certificate.png
+            <div class="card-body"><a href="Images/FreeCodeCamp%20-%20Responsive%20Web%20Design%20Certificate.png"><img
                     src="Images/FreeCodeCamp%20-%20Responsive%20Web%20Design%20Certificate.png"
                     alt="freeCodeCamp Certificate of Completion - Responsive Web Design"></a></div>
         </div>
