updated awards and decorations page

--- a/awards_decorations.html
+++ b/awards_decorations.html
@@ -61,22 +61,22 @@
                     alt="Certificate of Completion - Web Development"></a></div>
         </div>
         <div class="card">
-            <div class="card-body"><a href="Certificates/appreciation.html"><img
+            <div class="card-body"><a href="Images/certificate_of%20_appreciation_barak_obama.jpg"><img
                     src="Images/certificate_of%20_appreciation_barak_obama.jpg"
                     alt="Certificate of Appreciation From President Barak Obama"></a></div>
         </div>
         <div class="card">
-            <div class="card-body"><a href="Certificates/retirement.html"><img
+            <div class="card-body"><a href="Images/certificate_of_retirement.jpg"><img
                     src="Images/certificate_of_retirement.jpg"
                     alt="Certificate of Retirement from the United States Air Force"></a></div>
         </div>
         <div class="card">
-            <div class="card-body"><a href="Certificates/njanghd.html"><img
+            <div class="card-body"><a href="Images/NJANG_Honorable_Discharge_Certificate.jpg"><img
                     src="Images/NJANG_Honorable_Discharge_Certificate.jpg"
                     alt="Air National Guard Honorable Discharge Certificate"></a></div>
         </div>
         <div class="card">
-            <div class="card-body"><a href="Certificates/usmchd.html"><img src="Images/USMC_Discharge.jpg" alt="Honorable Discharge Certificate - USMC(R)"></a>
+            <div class="card-body"><a href="Images/USMC_Discharge.jpg"><img src="Images/USMC_Discharge.jpg" alt="Honorable Discharge Certificate - USMC(R)"></a>
             </div>
         </div>
         <div class="card">
@@ -84,7 +84,7 @@
                                         class="m9badge"></div>
         </div>
         <div class="card">
-            <div class="card-body"><a href="Certificates/recognition.html"><img
+            <div class="card-body"><a href="Images/Certificate_Of_Recognition_Cold_War.jpg"><img
                     src="Images/Certificate_Of_Recognition_Cold_War.jpg"
                     alt="Certificate of Recognition - Service During The Cold War"></a></div>
         </div>
