--- a/work_history.html
+++ b/work_history.html
@@ -12,10 +12,12 @@
 
 <div class="container-fluid">
 <!--    <div id="ccp">-->
-<!--        <h2 id="ccpt" class="text1">Community College of Philadelphia Student Work-Study Allowance Program</h2>-->
-<!--<div class="container-fluid">-->
-<!--    <div id="ccp">-->
-
+<!--        <h2 class="text1" id="ccpTitle">Community College of Philadelphia VA Work Study Program</h2>-->
+<!--        <p class="year text2">2026 - Present</p>-->
+<!--        <p class="location text2">Philadelphia, Pennsylvania</p>-->
+<!--        <p id="ccpt" class="text3">Veteran Resource Center Representative</p>-->
+<!--        <p id="ccpp" class="text3">I assist veterans with applying for their benefits.  I also help veterans find for what benefits they may qualify.  I give students guidance to buildings and classrooms on the campus, and give whatever advice I believe will be helpfull to the student/veteran.</p>-->
+<!--    </div>-->
     <div id="dover">
         <h2 class="text1" id="doverTitle">Air Mobility Command Museum</h2>
         <p class="year text2">2025 - Present</p>
@@ -39,7 +41,7 @@
             for
             veterans to use. I performed and ensured proper installation of appropriate software. I installed, and
             performed
-            minor repairs to hardware, software and peripheral equipment, following design and installation
+            minor repairs to hardware, software, and peripheral equipment, following design and installation
             specifications.
             I
             answered users' inquiries regarding computer software and hardware operation to resolve problems that
