Change image format from JPG to JPEG

--- a/awards_decorations.html
+++ b/awards_decorations.html
@@ -19,7 +19,7 @@
 <div class="container-fluid m-0 p-0">
     <div class="ribbon-section">
         <hr>
-        <img src="Images/Ribbon_Rack.jpg" alt="Ribbons earned in military service">
+        <img src="Images/Ribbon_Rack.jpeg" alt="Ribbons earned in military service">
     </div>
     <div>
         <ol class="ribbons-list">
