updated awards and decorations page

--- a/awards_decorations.html
+++ b/awards_decorations.html
@@ -24,8 +24,8 @@
     <div>
         <ol class="ribbons-list">
             <li>Meritorious Service Ribbon With 4 Bronze Oak Leafs</li>
-            <li>United States Marine Corps Presidential Unit Citation</li>
             <li>Air Force Outstanding Unit Ribbon</li>
+            <li>United States Marine Corps Meritorious Unit Citation</li>
             <li>Selected Marine Corps Reserve Medal</li>
             <li>National Defense Service Medal Ribbon</li>
             <li>Global War On Terrorism Expeditionary Ribbon</li>
